...

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="What have you been up to?"
      app:layout_constraintBottom_toTopOf="@+id/activity2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
...
      android:orientation="horizontal"
      app:cardCornerRadius="10dp"
      app:layout_constraintBottom_toTopOf="@+id/activity3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.481"
...

    <CheckBox
        android:id="@+id/checkbox_tv"
        android:layout_width="65dp"
        android:layout_height="85dp"
...

    <CheckBox
        android:id="@+id/checkbox_reading"
        android:layout_width="60dp"
        android:layout_height="70dp"
...

    <CheckBox
        android:id="@+id/checkbox_gaming"
        android:layout_width="60dp"
        android:layout_height="72dp"
...

    <CheckBox
        android:id="@+id/checkbox_sport"
        android:layout_width="60dp"
        android:layout_height="70dp"
...

    <CheckBox
        android:id="@+id/checkbox_relax"
        android:layout_width="60dp"
        android:layout_height="70dp"
...

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="Hobbies" />
  </androidx.cardview.widget.CardView>

...

    <CheckBox
        android:id="@+id/checkbox_good_sleep"
        android:layout_width="65dp"
        android:layout_height="85dp"
...

    <CheckBox
        android:id="@+id/checkbox_medium_sleep"
        android:layout_width="60dp"
        android:layout_height="85dp"
...

    <CheckBox
        android:id="@+id/checkbox_bad_sleep"
        android:layout_width="65dp"
        android:layout_height="75dp"
...

    <CheckBox
        android:id="@+id/checkbox_sleep_early"
        android:layout_width="65dp"
        android:layout_height="90dp"
...
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="Sleep" />
  </androidx.cardview.widget.CardView>

...
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      app:layout_constraintBottom_toTopOf="@+id/save_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.481"
...

    <CheckBox
        android:id="@+id/checkbox_eat_healthy"
        android:layout_width="65dp"
        android:layout_height="85dp"
...

    <CheckBox
        android:id="@+id/checkbox_fat_foot"
        android:layout_width="60dp"
        android:layout_height="70dp"
...

    <CheckBox
        android:id="@+id/checkbox_no_meat"
        android:layout_width="60dp"
        android:layout_height="70dp"
...

    <CheckBox
        android:id="@+id/checkbox_homemade"
        android:layout_width="60dp"
        android:layout_height="72dp"
...

    <CheckBox
        android:id="@+id/checkbox_no_sweets"
        android:layout_width="60dp"
        android:layout_height="72dp"
...

    <CheckBox
        android:id="@+id/checkbox_restaurant"
        android:layout_width="60dp"
        android:layout_height="70dp"
...

    <CheckBox
        android:id="@+id/checkbox_no_soda"
        android:layout_width="60dp"
        android:layout_height="70dp"
...

    <CheckBox
        android:id="@+id/checkbox_delivery"
        android:layout_width="60dp"
        android:layout_height="70dp"
...
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="Food" />
  </androidx.cardview.widget.CardView>

...
