<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.diary.SurveyMoodActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="How are you?"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="360dp"
        android:layout_height="99dp"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:button="@android:color/transparent"
            android:layout_weight="2"
            android:contentDescription="happy"
            android:background="@drawable/happy_image_selector"
            android:layout_marginRight="10dp"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:button="@android:color/transparent"
            android:layout_marginRight="10dp"
            android:contentDescription="good"
            android:background="@drawable/good_image_selector"
            android:layout_weight="2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:button="@android:color/transparent"
            android:background="@drawable/medium_image_selector"
            android:layout_marginRight="10dp"
            android:contentDescription="medium"
            android:layout_weight="2" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:button="@android:color/transparent"
            android:background="@drawable/bad_image_selector"
            android:layout_marginRight="10dp"
            android:contentDescription="bad"
            android:layout_weight="2" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:button="@android:color/transparent"
            android:background="@drawable/awful_image_selector"
            android:layout_marginRight="10dp"
            android:contentDescription="awful"
            android:layout_weight="2" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>