<resources>
    <string name="app_name">Thrive</string>
    <string name="title_today">Today</string>
    <string name="title_diary">Diary</string>
    <string name="title_plans">Plans</string>
    <string name="title_profile">Profile</string>
    <string name="title_sign_in">sign in</string>
    <string name="sign_in_Google">Google</string>
...
